<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Acerca_de"
    android:padding="18dp">

    <ScrollView
        android:id="@+id/scrollViewAcercaDe"
        style="@style/Theme.GUID3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutPrincipalAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/Theme.GUID3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


        <TextView
            android:id="@+id/nombre_app_acercade"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/android:textColorPrimary"
            android:fontFamily="@font/fuente_principal"
            android:textSize="30sp"
            android:textAlignment="center" />

            <TextView
                android:id="@+id/tech_app_acercade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre_app_acercade"
                android:layout_alignStart="@+id/nombre_app_acercade"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/fuente_principal"
                android:text="@string/technologies_text_acercade"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColorPrimary"
                android:textSize="25sp" />

        <ImageView
            android:id="@+id/logo_app_acercade"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/texto_version_app"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo1"
            android:background="?attr/colorPrimary" />

            <TextView
                android:id="@+id/texto_version_de_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tech_app_acercade"
                android:layout_alignStart="@+id/nombre_app_acercade"
                android:layout_marginStart="0dp"
                android:fontFamily="@font/fuente_principal"
                android:text="@string/app_version"
                android:textAlignment="textStart"
                android:textColor="?attr/android:textColorSecondary"
                android:textSize="13sp" />

        <TextView
            android:id="@+id/texto_version_app"
            android:text="@string/version_de_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tech_app_acercade"
            android:layout_toEndOf="@id/texto_version_de_app"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/fuente_principal"
            android:textColor="?attr/android:textColorSecondary"
            android:textStyle="bold"
            android:textSize="13sp"/>



        <TextView
            android:id="@+id/texto_acerca_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/texto_version_app"
            android:textAlignment="inherit"
            android:text="@string/texto_acerca_de"
            android:textColor="?attr/android:textColorSecondary"
            android:fontFamily="@font/fuente_principal"
            android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
