<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_principal"
    tools:context=".Fragments.Ajustes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/foto_de_usario"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/foto_de_usuario"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/txtPerfilNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            android:textSize="20sp"
            android:textColor="?attr/android:textColorPrimary"
            android:fontFamily="@font/fuente_principal"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/txtPerfilEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:textColor="?attr/android:textColorSecondary"
            android:fontFamily="@font/fuente_principal"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/btnEditarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/editar_perfil"
            android:textSize="18sp"
            android:backgroundTint="?attr/colorSecondary"
            android:textColor="?attr/colorOnSecondary"
            android:elevation="5dp"
            android:fontFamily="@font/fuente_principal" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_contenedor_accesibilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_ajustes">

                <TextView
                    android:id="@+id/texto_accesibilidad_vAjustes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accesibilidad"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="?attr/android:textColorPrimary"
                    android:fontFamily="@font/fuente_principal" />

                <ImageView
                    android:id="@+id/modo_noche_icono"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/texto_accesibilidad_vAjustes"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/modo_noche_icono" />

                <TextView
                    android:id="@+id/texto_modo_noche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/texto_accesibilidad_vAjustes"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@+id/modo_noche_icono"
                    android:fontFamily="@font/fuente_principal"
                    android:text="@string/modo_noche"
                    android:textColor="?attr/android:textColorPrimary"
                    android:textSize="18sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/Switch_modo_noche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/texto_accesibilidad_vAjustes"
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    app:switchMinWidth="50dp" />

                <ImageView
                    android:id="@+id/idioma_icono"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/modo_noche_icono"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/idioma_icono" />

                <TextView
                    android:id="@+id/texto_cambiar_idioma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/texto_modo_noche"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/modo_noche_icono"
                    android:fontFamily="@font/fuente_principal"
                    android:text="@string/cambiar_idioma"
                    android:textColor="?attr/android:textColorPrimary"
                    android:textSize="18sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/Switch_cambiar_idioma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Switch_modo_noche"
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    app:switchMinWidth="50dp" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
